# mediatr_py_custom

./: README.md  pyproject.toml  requirements.txt
mediatr/: __init__.py  exceptions.py  mediator.py
